# MineSweeper

./: CMakeLists.txt  README.md
Code/: gameFuncts.c  gameFuncts.h  leaderBoardFuncts.c  leaderBoardFuncts.h  main.c  other.h
Docs/: Design_Plan.docx
